--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$byj8rrNwI/zmt3x4etFFIeYS76lkfFhA7CbSYjSGNtgtWlt.fWpVy"
+# 	- password: java.lang.String = "$2a$05$ePq9h52qODldqGVP7YsP2.q6BZEdbvPUP8PSvOkMsm6Mo1iLcSN5y"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$JEfyfPa2ieP4VmlaWUcbpOKZSVG7czUkCBMLAmQoVBIXDo4wWjxkG"
+# 	- password: java.lang.String = "$2a$05$qqJUHER8QlC3Vd5Qy1Dat.CFT.47c5MZ7No6MaqElUja7pPYt4C/i"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,32 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+ToledoBulletin01=6
+
+# acme.entities.bulletins.ToledoBulletin{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.bulletins.ToledoBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alberto Toledo"
+# 	- text: java.lang.String = "Estoy feliz, prueba 1"
+# 	- moment: java.util.Date = <<Thu Aug 08 19:31:00 CEST 2019>>
+
+ToledoBulletin02=7
+
+# acme.entities.bulletins.ToledoBulletin{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.bulletins.ToledoBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alberto Toledo"
+# 	- text: java.lang.String = "Estoy muy feliz, prueba 2"
+# 	- moment: java.util.Date = <<Thu Aug 08 19:36:00 CEST 2019>>
 
