--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$byj8rrNwI/zmt3x4etFFIeYS76lkfFhA7CbSYjSGNtgtWlt.fWpVy"
+# 	- password: java.lang.String = "$2a$05$LlxxHq6D1Q.HxRb.fentPO9fC6zcuHb6x2u1jgeNG1DMhIt9/V6QS"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$JEfyfPa2ieP4VmlaWUcbpOKZSVG7czUkCBMLAmQoVBIXDo4wWjxkG"
+# 	- password: java.lang.String = "$2a$05$OpYjYnr/OYKgevF04s8QdOZqH2trkLMTzsEq.L2kqHG7Mnt/sM5uq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,46 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+BarbaBulletin01=6
+
+# acme.entities.bulletins.BarbaBulletin{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BarbaBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alejandro Barba"
+# 	- text: java.lang.String = "Bulletin de prueba 1"
+# 	- moment: java.util.Date = <<Sun Jul 07 00:00:00 CEST 2019>>
+
+BarbaBulletin02=7
+
+# acme.entities.bulletins.BarbaBulletin{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BarbaBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alejandro Barba"
+# 	- text: java.lang.String = "Bulletin de prueba 2"
+# 	- moment: java.util.Date = <<Thu Aug 08 00:00:00 CEST 2019>>
+
+BarbaBulletin03=8
+
+# acme.entities.bulletins.BarbaBulletin{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BarbaBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alejandro Barba"
+# 	- text: java.lang.String = "Bulletin de prueba 3"
+# 	- moment: java.util.Date = <<Mon Sep 09 00:00:00 CEST 2019>>
 
