--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$ePq9h52qODldqGVP7YsP2.q6BZEdbvPUP8PSvOkMsm6Mo1iLcSN5y"
+# 	- password: java.lang.String = "$2a$05$A0kO.A55BotSGeTUMeH2C.fs80i6QxD.MN3jLFhgO3telnsmwr/kW"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$qqJUHER8QlC3Vd5Qy1Dat.CFT.47c5MZ7No6MaqElUja7pPYt4C/i"
+# 	- password: java.lang.String = "$2a$05$RIwS6MQnvwtJpRoITOWhUuONu0vCtKCY4ScE/XWE.AlrY.8N/tkE6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -93,6 +93,7 @@ ToledoBulletin01=6
 # 	- author: java.lang.String = "Alberto Toledo"
 # 	- text: java.lang.String = "Estoy feliz, prueba 1"
 # 	- moment: java.util.Date = <<Thu Aug 08 19:31:00 CEST 2019>>
+# 	- email: java.lang.String = "email@prueba1"
 
 ToledoBulletin02=7
 
@@ -107,4 +108,5 @@ ToledoBulletin02=7
 # 	- author: java.lang.String = "Alberto Toledo"
 # 	- text: java.lang.String = "Estoy muy feliz, prueba 2"
 # 	- moment: java.util.Date = <<Thu Aug 08 19:36:00 CEST 2019>>
+# 	- email: java.lang.String = "email@prueba2.com"
 
