--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$byj8rrNwI/zmt3x4etFFIeYS76lkfFhA7CbSYjSGNtgtWlt.fWpVy"
+# 	- password: java.lang.String = "$2a$05$R81jO3MKxGY3nzRoqAFOQunZ/4o0mQqYSlMJzmnoyZ/q7wI4CbSHK"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$JEfyfPa2ieP4VmlaWUcbpOKZSVG7czUkCBMLAmQoVBIXDo4wWjxkG"
+# 	- password: java.lang.String = "$2a$05$tp0y.e/bJdT2XsgddUKBGOOCQbyCwUJAIgH7.6CNfwzCAXpo.oOVm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,34 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+PatonBulletin1=6
+
+# acme.entities.bulletins.PatonBulletin{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.bulletins.PatonBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Miguel Patón Gutiérrez"
+# 	- text: java.lang.String = "Esta es la primera prueba"
+# 	- moment: java.util.Date = <<Sun Oct 20 23:42:00 CEST 2019>>
+# 	- company: java.lang.String = "Compañia de prueba"
+
+PatonBulletin2=7
+
+# acme.entities.bulletins.PatonBulletin{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.bulletins.PatonBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Miguel Angel Patón Carmona"
+# 	- text: java.lang.String = "Esta es la segunda prueba"
+# 	- moment: java.util.Date = <<Sat Oct 19 20:15:00 CEST 2019>>
+# 	- company: java.lang.String = "Empresa de prueba"
 
