--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$byj8rrNwI/zmt3x4etFFIeYS76lkfFhA7CbSYjSGNtgtWlt.fWpVy"
+# 	- password: java.lang.String = "$2a$05$7v/qkRGutB1nYAsPiSsrXeEY0hf0jzRbYT9iPwQ3At6FzIGGTUh1m"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$JEfyfPa2ieP4VmlaWUcbpOKZSVG7czUkCBMLAmQoVBIXDo4wWjxkG"
+# 	- password: java.lang.String = "$2a$05$KPLxU2sfLcWaeUkeIALoeONc9i9fNbAm16HxXKVvIZAja9ccG6dPe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,64 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+bonaciniBulletin01=6
+
+# acme.entities.bulletins.BonaciniBulletin{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BonaciniBulletin:
+# 	- serialVersionUID: long = 1
+# 	- moment: java.util.Date = <<Sat Apr 20 16:00:00 CEST 2002>>
+# 	- author: java.lang.String = "Emiya Shirou"
+# 	- text: java.lang.String = "People die if they're killed..."
+# 	- city: java.lang.String = "Fuyuki"
+
+bonaciniBulletin02=7
+
+# acme.entities.bulletins.BonaciniBulletin{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BonaciniBulletin:
+# 	- serialVersionUID: long = 1
+# 	- moment: java.util.Date = <<Wed Apr 02 14:00:00 CEST 2014>>
+# 	- author: java.lang.String = "Luca Bonacini"
+# 	- text: java.lang.String = "I am eternally 17 (◕‿◕✿)"
+# 	- city: java.lang.String = "Planet Usamin"
+
+bonaciniBulletin03=8
+
+# acme.entities.bulletins.BonaciniBulletin{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BonaciniBulletin:
+# 	- serialVersionUID: long = 1
+# 	- moment: java.util.Date = <<Tue Oct 23 22:37:00 CEST 2007>>
+# 	- author: java.lang.String = "Suzumiya Haruhi"
+# 	- text: java.lang.String = "All ships, open fire! Go out there and burn the enemy leader with all the fires of hell!"
+# 	- city: java.lang.String = "Tokyo"
+
+bonaciniBulletin04=9
+
+# acme.entities.bulletins.BonaciniBulletin{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.bulletins.BonaciniBulletin:
+# 	- serialVersionUID: long = 1
+# 	- moment: java.util.Date = <<Fri May 13 12:45:00 CEST 2011>>
+# 	- author: java.lang.String = "Sasasegawa Sasami"
+# 	- text: java.lang.String = "My name is Sasasesa... Sasasegawa Sasami!"
+# 	- city: java.lang.String = "Keyverse"
 
