--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@
 server.servlet.contextPath						= /acme-jobs
 server.port										= 8080
 
-spring.datasource.url							= jdbc:mysql://localhost:3306/Acme-Jobs?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= acme-user
-spring.datasource.password						= ACME-Us3r-P@ssw0rd
+spring.datasource.url							= jdbc:mysql://bhc7ybzg2phvylnlmyuv-mysql.services.clever-cloud.com:3306/bhc7ybzg2phvylnlmyuv
+spring.datasource.username						= uh7xfmkvgpb5xjth
+spring.datasource.password						= oYoEChIAgBN5k5Cw8sN6
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
